RESOLVED FIXED204646
[LFC][Render tree] PerformanceTests/Layout/line-layout-simple.html does not update properly with LFC enabled
https://bugs.webkit.org/show_bug.cgi?id=204646
Summary [LFC][Render tree] PerformanceTests/Layout/line-layout-simple.html does not u...
Antti Koivisto
Reported 2019-11-27 08:31:40 PST
Fix invalidation.
Attachments
patch (1.43 KB, patch)
2019-11-27 08:35 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-11-27 08:35:27 PST
WebKit Commit Bot
Comment 2 2019-11-27 09:11:16 PST
Comment on attachment 384414 [details] patch Clearing flags on attachment: 384414 Committed r252907: <https://trac.webkit.org/changeset/252907>
WebKit Commit Bot
Comment 3 2019-11-27 09:11:17 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-11-27 09:12:20 PST
Note You need to log in before you can comment on or make changes to this bug.