[LFC][Render tree] PerformanceTests/Layout/line-layout-simple.html does not update properly with LFC enabled https://bugs.webkit.org/show_bug.cgi?id=204646

Reviewed by Zalan Bujtas.

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::invalidateLineLayoutPath):

Destroy LFC layout here, for now.


Canonical link: https://commits.webkit.org/217880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252907 268f45cc-cd09-0410-ab3c-d52691b4dbfc